# maven-client

./: README.md
cli/: Cargo.toml  README.md  README.tpl
cli/src/: main.rs
lib/: Cargo.toml  README.md  README.tpl
lib/src/: lib.rs  tools.rs  types.rs
lib/src/types/: gav.rs  mod.rs
