[package]
name = "maven-client"
version = "0.1.0"
edition = "2021"
authors = ["Thomas Kilian <Thomas-Kilian@gmx.net>"]
description = "A library for interfacing maven repositories."
repository = "https://github.com/BigPapa314/maven-client/tree/master/lib"
readme = "README.md"
keywords = ["cli", "maven"]
categories = ["command-line-utilities"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
github = { repository = "BigPapa314/maven-client", workflow="CI" }

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
semver_rs = "0.2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
